small fix Large Transaction Verify

--- a/src/main/resources/templates/SuccessfulTransactionView.html
+++ b/src/main/resources/templates/SuccessfulTransactionView.html
@@ -32,17 +32,11 @@
     <div class="section-title">
         <h2>YOUR TRANSACTION IS SUCCESSFUL</h2>
     </div>
-    <h1 id="successful-transaction-label">YOUR TRANSACTION IS SUCCESSFUL!</h1>
 
 </section>
 </body>
-<style>
-    #successful-transaction-label{
-        width: 850px;
-        height: 200px;
-        margin: 0px;
-    }
-</style>
+<div th:replace="~{/PageFrame :: footer}"></div>
+
 <!-- Vendor JS Files -->
 <script src="../assets/vendor/aos/aos.js"></script>
 <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
