--- a/src/main/resources/templates/categoriesView.html
+++ b/src/main/resources/templates/categoriesView.html
@@ -98,7 +98,8 @@
                                 <i class="bx bx-chevron-up icon-close"></i>
                             </a>
                             <div class="buttons">
-                                <a id="edit-icon" data-toggle="modal" data-target="#editCategoryModal" th:href="@{/categories/{name}/update(name=${category.name})}">
+                                <a id="edit-icon" data-toggle="modal" data-target="#editCategoryModal"
+                                   th:href="@{/categories/{name}/update(name=${category.name})}">
 
                                     <button class="edit-btn" value='Edit category' title="Edit category"><i
                                             class="fa fa-edit"></i></button>
