--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -40,50 +40,55 @@
 <body>
 
 <!--<section>-->
-    <!--<div th:fragment="navbar">-->
+<!--<div th:fragment="navbar">-->
 
-    <header id="header" class="fixed-top " th:fragment="navbar">
-<!--        <footer style="background-color: rgba(40, 58, 90, 0.9); height: 71px; width: 100%;">-->
-<!--        </footer>-->
-        <div class="container d-flex align-items-center">
+<header id="header" class="fixed-top " th:fragment="navbar">
+    <!--        <footer style="background-color: rgba(40, 58, 90, 0.9); height: 71px; width: 100%;">-->
+    <!--        </footer>-->
+    <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="index.html">Flex Pay</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <h1 class="logo me-auto"><a href="index.html">Flex Pay</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-            <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a class="nav-link scrollto active" th:href="@{/}">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li th:unless="${isAuthenticated}"><a class="nav-link scrollto" th:href="@{/authentication/login}">Login</a></li>
-                    <li><a class="nav-link scrollto" th:href="@{/authentication/logout}">Log out</a></li>
-                        <li><a class="nav-link scrollto" href="#team">Team</a></li>
-                    <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-                        <ul>
-                            <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
-                                    class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Drop Down 2</a></li>
-                            <li><a href="#">Drop Down 3</a></li>
-                            <li><a href="#">Drop Down 4</a></li>
-                        </ul>
-                    </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    <li><a class="getstarted scrollto" th:href="@{/authentication/register}">Get Started</a></li>
-                </ul>
-                <i class="bi bi-list mobile-nav-toggle"></i>
-            </nav><!-- .navbar -->
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a class="nav-link scrollto active" th:href="@{/}">Home</a></li>
+                <li><a class="nav-link scrollto" href="#about">About</a></li>
+                <li th:unless="${isAuthenticated}"><a class="nav-link scrollto"
+                                                      th:href="@{/authentication/login}">Login</a></li>
+                <li><a class="nav-link scrollto" th:href="@{/authentication/logout}">Log out</a></li>
+                <li><a class="nav-link scrollto" href="#team">Team</a></li>
 
-        </div>
-    </header><!-- End Header -->
+
+                <li th:unless="${isAuthenticated}" class="dropdown">
+                    <a href="#"><span>Cards</span> <i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                        <li><a th:href="@{/cards}">All cards</a></li>
+                        <li><a th:href="@{/cards/deposit}">Deposit</a></li>
+                        <li><a th:href="@{/cards/withdraw}">Withdraw</a></li>
+
+                    </ul>
+                </li>
+
+                <li th:unless="${isAuthenticated}" class="dropdown">
+                    <a href="#"><span>Wallets</span> <i class="bi bi-chevron-down"></i></a>
+                    <ul>
+                        <li><a class="nav-link scrollto" href="#wallet">Wallet</a></li>
+                        <li><a class="nav-link scrollto" href="#contactList">Contact List</a></li>
+                        <li><a th:href="@{/categories}">Categories</a></li>
+                    </ul>
+                </li>
+
+
+                <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                <li><a class="getstarted scrollto" th:href="@{/authentication/register}">Get Started</a></li>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+
+    </div>
+</header><!-- End Header -->
 <!--</section>-->
 </body>
 </html>
