--- a/src/main/resources/templates/submitted.html
+++ b/src/main/resources/templates/submitted.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head><title>Your document was submitted</title></head>
+
+<head>
+    <meta charset="utf-8">
+    <title> Verify identity </title>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
+
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="../assets/css/style.css" rel="stylesheet">
+</head>
 <body>
-<h1>Thanks for submitting your identity document.</h1>
-<p>
-    We are processing your verification.
-</p>
+<div>
+    <div th:replace="~{/NavBar :: navbar}"></div>
+    <br><br><br>
+    <main class="cd__main">
+        <!-- Start DEMO HTML (Use the following code into your project)-->
+        <body class="container-fluid bg-body-tertiary d-block">
+
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 col-lg-4" style="min-width: 500px;">
+                    <div class="card bg-white mb-5 mt-5 border-0" style="box-shadow: 0 12px 15px rgba(0, 0, 0, 0.02);">
+                        <div class="card-body p-5 text-center">
+                            <h4>Submitted</h4>
+                            <p style="text-align: justify">Rest assured that we take your privacy and security seriously,
+                                and this verification process helps us maintain a safe environment for all our users.
+                                Thank you for your cooperation and for helping us ensure the integrity of our platform.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </body>
+    </main>
+</div>
+<div th:replace="~{/PageFrame :: footer}"></div>
+<!-- Vendor JS Files -->
+<script src="../assets/vendor/aos/aos.js"></script>
+<script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+<script src="../assets/vendor/php-email-form/validate.js"></script>
+
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
