Id authentication functionality updated

--- a/src/main/resources/templates/identity-verification.html
+++ b/src/main/resources/templates/identity-verification.html
@@ -69,7 +69,7 @@
                                             if (result.error) {
                                                 alert("Please, click Verify and follow the instructions!");
                                             } else {
-                                                window.location.href = 'submit-verification-session';
+                                                window.location.href = 'submit-session';
                                             }
                                         })
                                         .catch(function(error) {
