refactor ProfileView name

--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -88,12 +88,12 @@
                 <li th:if="${!isAuthenticated}"><a class="getstarted scrollto" th:href="@{/authentication/register}">Start
                     Flexing</a>
 
-                <li th:if="${isAuthenticated}">
-                    <div class="flex-shrink-0">
-                        <img class="rounded-circle" th:src="@{${currentUser.picture != null ? currentUser.picture : '/image-1.png'}}" alt="User profile picture"
-                             style="max-width: 65px; max-height: 65px;">
-                    </div>
-                </li>
+<!--                <li th:if="${isAuthenticated}">-->
+<!--                    <div class="flex-shrink-0">-->
+<!--                        <img class="rounded-circle" th:src="@{${currentUser.picture != null ? currentUser.picture : '/image-1.png'}}" alt="User profile picture"-->
+<!--                             style="max-width: 65px; max-height: 65px;">-->
+<!--                    </div>-->
+<!--                </li>-->
 
 
 
