--- a/src/main/resources/templates/WithdrawView.html
+++ b/src/main/resources/templates/WithdrawView.html
@@ -42,7 +42,7 @@
     <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-            <h2>Deposit</h2>
+            <h2>Withdraw</h2>
 
             <div th:if="${user.getCards().isEmpty()}">
 
