--- a/src/main/resources/templates/LogInView.html
+++ b/src/main/resources/templates/LogInView.html
@@ -45,7 +45,10 @@
 <div class="section-title">
     <h2>Log in</h2>
 </div>
-<section id="category-update-container" class="centered-input">
+<section id="category-update-container" class="centered-input" style="margin-left: 417pt;
+    margin-top: 2%;
+    margin-right: 10%;
+    min-width: 25%;">
     <div class="centered-input">
         <form action="#" th:action="@{/authentication/login}" th:object="${login}" method="post">
             <label class="centered-input">Username</label>
