Revert "EditView th:value change"
This reverts commit a11bc6c54d6c5988b67618443dfbc706b8b54a57.

--- a/src/main/resources/templates/UserEditView.html
+++ b/src/main/resources/templates/UserEditView.html
@@ -102,7 +102,7 @@
                 placeholder</label>
                 <br/>
                 <p>Please enter photo URL</p>
-                <input class="input-group-text" type="text" th:field="*{photoUrl}" th:value="${dto.photoUrl}"/>
+                <input class="input-group-text" type="text" th:field="*{photoUrl}" th:value="${dto.phoneNumber}"/>
 
                 <br/>
                 <input class="buttonLogIn" type="submit" value="Submit">
