changed the footer css to be static

--- a/src/main/resources/static/category.css
+++ b/src/main/resources/static/category.css
@@ -156,7 +156,7 @@
 }
 
 #category-update-container{
-    margin-left: 40%;
+    /*margin-left: 40%;*/
     margin-top: 5%;
     /*min-width: 18%;*/
     /*max-width: 18%;*/
