--- a/src/main/resources/templates/CardNewView.html
+++ b/src/main/resources/templates/CardNewView.html
@@ -2,11 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create a saving wallet</title>
+    <title>Create a card</title>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <link href="../static/plusModal.css" th:href="@{/plusModal.css}" rel="stylesheet">
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <!-- Vendor CSS Files -->
     <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
