--- a/src/main/resources/templates/CardUpdateView.html
+++ b/src/main/resources/templates/CardUpdateView.html
@@ -5,6 +5,8 @@
     <title>Create a saving wallet</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
 
