--- a/src/main/resources/templates/PasswordChangeView.html
+++ b/src/main/resources/templates/PasswordChangeView.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Change password</title>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
