--- a/src/main/resources/templates/ProfileView.html
+++ b/src/main/resources/templates/ProfileView.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile View</title>
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
     <style>
         /* Overall container styling */
         .profile-container {
