--- a/src/main/resources/templates/cardsView.html
+++ b/src/main/resources/templates/cardsView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create a saving wallet</title>
+    <title>Cards</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
     <link href="../static/plusModal.css" th:href="@{/plusModal.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
@@ -12,6 +12,9 @@
     <title>Arsha Bootstrap Template - Index</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon">
