--- a/src/main/resources/templates/categoriesView.html
+++ b/src/main/resources/templates/categoriesView.html
@@ -3,11 +3,15 @@
 <!--<div th:insert="~{/PageFrame :: head('Categories')}"></div>-->
 <head>
     <meta charset="utf-8">
+    <title>Categories</title>
+
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Arsha Bootstrap Template - Index</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
 
     <!-- Favicons -->
     <link href="../../assets/img/favicon.png" rel="icon">
@@ -141,6 +145,7 @@
                     </div>
                 </ul>
             </div>
+        </div>
         </div>
     </section>
 <!--</div>-->
