--- a/src/main/resources/templates/CategoryUpdateView.html
+++ b/src/main/resources/templates/CategoryUpdateView.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create a saving wallet</title>
+    <title>Update Category</title>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
