--- a/src/main/resources/templates/LogInView.html
+++ b/src/main/resources/templates/LogInView.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Log in</title>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -45,10 +46,11 @@
 <div class="section-title">
     <h2>Log in</h2>
 </div>
-<section id="category-update-container" class="centered-input" style="margin-left: 417pt;
-    margin-top: 2%;
-    margin-right: 10%;
-    min-width: 25%;">
+<section id="category-update-container" class="centered-input" >
+<!--         style="margin-left: 417pt;-->
+<!--    margin-top: 2%;-->
+<!--    margin-right: 10%;-->
+<!--    min-width: 25%;">-->
     <div class="centered-input">
         <form action="#" th:action="@{/authentication/login}" th:object="${login}" method="post">
             <label class="centered-input">Username</label>
