--- a/src/main/resources/templates/RegisterView.html
+++ b/src/main/resources/templates/RegisterView.html
@@ -9,6 +9,8 @@
     <meta name="author" content="CodeHim">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
     <!-- Vendor CSS Files -->
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
