--- a/src/main/resources/templates/UserEditView.html
+++ b/src/main/resources/templates/UserEditView.html
@@ -7,6 +7,8 @@
     <link href="../../assets/img/favicon.png" rel="icon">
     <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
 
     <!-- Google Fonts -->
