--- a/src/main/resources/templates/WalletCreateView.html
+++ b/src/main/resources/templates/WalletCreateView.html
@@ -2,10 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create a saving wallet</title>
+    <title>Create wallet</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
 
