--- a/src/main/resources/templates/portfolio-details.html
+++ b/src/main/resources/templates/portfolio-details.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
   <title>Portfolio Details - Arsha Bootstrap Template</title>
   <meta content="" name="description">
