--- a/src/main/resources/templates/submitted.html
+++ b/src/main/resources/templates/submitted.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <title> Verify identity </title>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css'>
+    <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
