--- a/src/main/resources/templates/HomePageView.html
+++ b/src/main/resources/templates/HomePageView.html
@@ -13,7 +13,8 @@
     <link href="../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Jost:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+          rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -34,6 +35,9 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
+
+    <!-- Include DataTables CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
 </head>
 
 
@@ -41,19 +45,21 @@
 <div th:replace="~{/NavBar.html :: navbar}"></div>
 
 <br><br>
-<section id="faq" class="faq section-bg">
+<section id="fag" class="faq section-bg">
 
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
+                     data-aos="fade-up" data-aos-delay="200">
                     <h1>Better Solutions For Your Business</h1>
                     <h2>We are team of talented designers making websites with Bootstrap</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                        <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i
+                                class="bi bi-play-circle"></i><span>Watch Video</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -70,7 +76,9 @@
 
             <div class="section-title">
                 <h2>Services</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.</p>
             </div>
 
             <div class="row">
@@ -82,7 +90,8 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+                     data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
                         <h4><a href="">Sed ut perspici</a></h4>
@@ -90,7 +99,8 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
+                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+                     data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
                         <h4><a href="">Magni Dolores</a></h4>
@@ -98,7 +108,8 @@
                     </div>
                 </div>
 
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
+                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+                     data-aos-delay="400">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-layer"></i></div>
                         <h4><a href="">Nemo Enim</a></h4>
@@ -112,21 +123,71 @@
     </section>
     <!-- End Services Section -->
 
-</section>
 
-<div th:replace="~{/PageFrame :: footer}"></div>
+    <section id="faq" class="faq section-bg">
+        <div class="container" data-aos="fade-up">
 
-<!-- Vendor JS Files -->
-<script src="../static/assets/vendor/aos/aos.js"></script>
-<script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-<script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="../static/assets/vendor/waypoints/noframework.waypoints.js"></script>
-<script src="../static/assets/vendor/php-email-form/validate.js"></script>
-<script src="../static/assets/js/main.js"></script>
+            <div class="section-title">
+                <h2>My categories</h2>
+                <br><br>
+            </div>
 
-<!-- Template Main JS File -->
-<script src="../static/assets/js/main.js"></script>
+            <br><br>
+
+            <div id="categories" th:unless="${transactionsIncoming.isEmpty()}">
+                <div class="faq-list">
+                    <ul>
+                        <!-- Loop through user categories -->
+                        <li th:each="transaction : ${transactionsIncoming}">
+                            <div class="table-responsive-sm">
+                                <table class="table table-hover table-sm transactionsTable">
+                                    <thead class="thead-dark">
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Amount</th>
+                                        <th scope="col">Currency</th>
+                                        <th scope="col">Date</th>
+                                        <th scope="col">Recipient</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td th:text="${transaction.id}"></td>
+                                        <td th:text="${transaction.amount}"></td>
+                                        <td th:text="${transaction.currency.currency}"></td>
+                                        <td th:text="${transaction.timestamp}"></td>
+                                        <td th:text="${transaction.recipientWallet.getUser().username}"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+    </section>
+
+    <div th:replace="~{/PageFrame :: footer}"></div>
+
+    <!-- Vendor JS Files -->
+    <script src="../static/assets/vendor/aos/aos.js"></script>
+    <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../static/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="../static/assets/vendor/php-email-form/validate.js"></script>
+    <script src="../static/assets/js/main.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="../static/assets/js/main.js"></script>
+    <!-- Template and Script for Tables -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('.transactionsTable').DataTable();
+        });
+    </script>
 </body>
 </html>
