--- a/src/main/resources/templates/DepositView.html
+++ b/src/main/resources/templates/DepositView.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Create deposit</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
+    <link href="../static/plusModal.css" th:href="@{/plusModal.css}" rel="stylesheet">
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
     <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
