--- a/src/main/resources/templates/WithdrawView.html
+++ b/src/main/resources/templates/WithdrawView.html
@@ -5,8 +5,10 @@
     <title>Create a withdraw</title>
     <link href="../static/card.css" th:href="@{/card.css}" rel="stylesheet">
     <link href="../static/category.css" th:href="@{/category.css}" rel="stylesheet">
+    <link href="../static/plusModal.css" th:href="@{/plusModal.css}" rel="stylesheet">
     <link href="../static/navbar.css" th:href="@{/navbar.css}" rel="stylesheet">
     <link href="../static/footer.css" th:href="@{/footer.css}" rel="stylesheet">
+
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
 
