--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -77,6 +77,7 @@
                     <ul>
                         <li><a class="nav-link scrollto" href="#contactList">Contact List</a></li>
                         <li><a th:href="@{/categories}">Categories</a></li>
+                        <li><a th:href="@{/wallets/transfer}">Transfer</a></li>
                     </ul>
                 </li>
 
