--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,12 +58,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Better Solutions For Your Business</h1>
-          <h2>We are team of talented designers making websites with Bootstrap</h2>
-          <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-          </div>
+          <h1>Welcome to FLEX PAY</h1>
+          <h2>Your number one virtual wallet dynamic web application</h2>
+            <h2> Our Java project, named Flex Pay, is a virtual wallet app developed using Java, HTML/CSS, JavaScript, and the Spring framework. It allows users to manage their very own currency wallet, make secure transactions, based on real-time exchange rates. </h2>
+            <h2> Learn more about our cool features below. Happy Flexing! </h2>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="../assets/img/hero-img.png" class="img-fluid animated" alt="">
@@ -108,7 +106,7 @@
         </div>
 
       </div>
-    </section><!-- End Cliens Section -->
+    </section><!-- End Cliencreas Section -->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
