--- a/src/main/resources/templates/HomePageView.html
+++ b/src/main/resources/templates/HomePageView.html
@@ -32,47 +32,51 @@
 <section id="faq" class="faq section-bg">
     <div class="container">
         <br><br>
-    <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
-             data-aos="fade-up" data-aos-delay="200">
+        <div class="row">
+            <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
+                 data-aos="fade-up" data-aos-delay="200">
 
-            <div th:if="${currentUser.wallet == null}">
-                <h3 id="no-wallets" th:text="#{wallet.title.empty}">YOU STILL HAVE NO WALLET</h3>
-                <div class="buttons">
-                     <a th:href="@{/wallets/new}">
-                            <button type="submit" class="buttonDeposit" th:text="#{wallet.label.create}">Create Wallet</button>
-                        </a>
-                    </div>
-            </div>
-
-            <div class="containerWallet" data-aos="fade-up" th:if="${currentUser.wallet != null and currentUser.wallet.isActive()}">
-                <div class="section-title">
-                    <h2>Wallet</h2>
-                </div>
-                <p class="wallet-balance">
-                    Balance: <span th:text="${currentUser.getWallet().getBalance()}"></span>
-                    <span class="currency" th:text="${currentUser.getWallet().getCurrency().currency}"></span>
-                </p>
-                <div class="buttons">
-                    <div>
-                        <a th:href="@{/cards/deposit}">
-                            <button type="submit" class="buttonDeposit" th:text="#{deposit.label}">Deposit</button>
-                        </a>
-                        <a th:href="@{/cards/withdraw}">
-                            <button type="button" class="buttonWithdraw" th:text="#{withdraw.label}">Withdraw</button>
-                        </a>
-                        <a th:href="@{/cards/withdraw}">
-                            <button type="button" class="buttonTransfer" th:text="#{transfer.label}">Transfer</button>
+                <div th:if="${currentUser.wallet == null}">
+                    <h3 id="no-wallets" th:text="#{wallet.title.empty}">YOU STILL HAVE NO WALLET</h3>
+                    <div class="buttons">
+                        <a th:href="@{/wallets/new}">
+                            <button type="submit" class="buttonDeposit" th:text="#{wallet.label.create}">Create Wallet
+                            </button>
                         </a>
                     </div>
                 </div>
+
+                <div class="containerWallet" data-aos="fade-up"
+                     th:if="${currentUser.wallet != null and currentUser.wallet.isActive()}">
+                    <div class="section-title">
+                        <h2>Wallet</h2>
+                    </div>
+                    <p class="wallet-balance">
+                        Balance: <span th:text="${currentUser.getWallet().getBalance()}"></span>
+                        <span class="currency" th:text="${currentUser.getWallet().getCurrency().currency}"></span>
+                    </p>
+                    <div class="buttons">
+                        <div>
+                            <a th:href="@{/cards/deposit}">
+                                <button type="submit" class="buttonDeposit" th:text="#{deposit.label}">Deposit</button>
+                            </a>
+                            <a th:href="@{/cards/withdraw}">
+                                <button type="button" class="buttonWithdraw" th:text="#{withdraw.label}">Withdraw
+                                </button>
+                            </a>
+                            <a th:href="@{/cards/withdraw}">
+                                <button type="button" class="buttonTransfer" th:text="#{transfer.label}">Transfer
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
+                <img src="../assets/img/hero-img.png" class="img-fluid animated" alt="">
             </div>
         </div>
-
-        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-            <img src="../assets/img/hero-img.png" class="img-fluid animated" alt="">
-        </div>
-    </div>
     </div>
 </section>
 <!-- End About Us Section -->
@@ -87,12 +91,26 @@
                 <div class="section-title">
                     <h2>Contact List</h2>
                 </div>
+
                 <div th:if="${currentUser.contactLists.isEmpty()}">
-                    <h3 id="no-categories" th:text="#{contact.title.empty}">YOU STILL HAVE NO CONTACTS</h3>
+                    <a th:href="@{/users/add}"style="  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;">
+                        <button type="submit" class="buttonWithdraw" >Add
+                        </button>
+                    </a>
+                    <h3 id="no-categories" th:text="#{contact.title.empty}" style="  display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;">YOU STILL HAVE NO CONTACTS</h3>
                 </div>
 
                 <div id="contact-list" th:unless="${currentUser.contactLists.isEmpty()}">
                     <div class="faq-list">
+                        <a th:href="@{/users/add}">
+                            <button type="submit" class="buttonWithdraw">Add</button>
+                        </a>
                         <ul>
 
                             <!-- Loop through user contact list -->
@@ -145,7 +163,8 @@
                         <span>Junior Java Developer</span>
                         <p>Kpanayotova98@gmail.com</p>
                         <div class="social">
-                            <a href="https://www.linkedin.com/in/katrinpanayotova?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"> <i class="ri-linkedin-box-fill"></i> </a>
+                            <a href="https://www.linkedin.com/in/katrinpanayotova?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
+                                <i class="ri-linkedin-box-fill"></i> </a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +178,8 @@
                         <span>Junior Java Developer</span>
                         <p>daradjanov@gmail.com</p>
                         <div class="social">
-                            <a href="https://www.linkedin.com/in/grisha-daradjanov-b2b6b02a7/"> <i class="ri-linkedin-box-fill"></i> </a>
+                            <a href="https://www.linkedin.com/in/grisha-daradjanov-b2b6b02a7/"> <i
+                                    class="ri-linkedin-box-fill"></i> </a>
                         </div>
                     </div>
                 </div>
@@ -173,7 +193,8 @@
                         <span>Junior Java Developer</span>
                         <p>valchanov.biz@gmail.com</p>
                         <div class="social">
-                            <a href="https://www.linkedin.com/in/g-valchanov/"> <i class="ri-linkedin-box-fill"></i> </a>
+                            <a href="https://www.linkedin.com/in/g-valchanov/"> <i class="ri-linkedin-box-fill"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
