--- a/src/main/resources/templates/AddToContactList.html
+++ b/src/main/resources/templates/AddToContactList.html
@@ -27,7 +27,7 @@
 <br><br>
 <section id="faq" class="faq section-bg">
     <div class="section-title">
-        <h2>Update Category</h2>
+        <h2>Add to contact list</h2>
     </div>
     <section id="category-update-container">
         <form id="category-update-form" action="#" th:action="@{/users/add}" th:object="${currentUser}" method="post">
