--- a/src/main/resources/templates/DepositView.html
+++ b/src/main/resources/templates/DepositView.html
@@ -49,7 +49,12 @@
 
             <div th:if="${user.getCards().isEmpty()}">
                 <br><br>
-                <h3 id="no-categories" th:text="#{cards.title.empty}">YOU STILL HAVE NO CARDS</h3>
+                <div style=" display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-direction: column;">
+                <h3 id="no-categories" th:text="#{cards.title.empty}" >YOU STILL HAVE NO CARDS</h3>
+                </div>
 
 
                 <div style="margin-top: 50px;">
