--- a/src/main/resources/templates/NavBar.html
+++ b/src/main/resources/templates/NavBar.html
@@ -58,6 +58,7 @@
                 <li th:if="${!isAuthenticated}"><a class="nav-link scrollto" href="#services">Services</a></li>
 
                 <li th:if="${!isAuthenticated}"><a class="nav-link scrollto" href="#team">Team</a></li>
+<!--                <li th:if="${!isAuthenticated}"><a class="nav-link scrollto" href="#team">Team</a></li> //todo ADMIN-->
 
 
                 <li th:if="${isAuthenticated}" class="dropdown">
@@ -75,7 +76,6 @@
                 <li th:if="${isAuthenticated}" class="dropdown">
                     <a href="#"><span>Wallets</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
-                        <li><a class="nav-link scrollto" href="#contactList">Contact List</a></li>
                         <li><a th:href="@{/categories}">Categories</a></li>
                         <li><a th:href="@{/wallets/transfer}">Transfer</a></li>
                     </ul>
